--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section id="main">
         <nav>
-            <a href="#" class="logo"><img src="img/logo_copy.png" alt="Logo" class="logo"></a>
+            <a href="https://dhairyak-20.github.io/sweet_tooth_factory/" class="logo"><img src="img/logo_copy.png" alt="Logo" class="logo"></a>
             <ul class="menu">
                 <li><a href="#" id="active"><b>Home</b></a></li>
                 <li><a href="cake.html"><b>Cakes</b></a></li>
