--- a/cake.html
+++ b/cake.html
@@ -98,7 +98,7 @@
     </section>
     <footer>
         <div class="footcontent">
-            <p>© 2021 Sweet Tooth Factory</p>
+            <p>© 2021 <a href="https://dhairyak-20.github.io/sweet_tooth_factory/">Sweet Tooth Factory</a></p>
         </div>
     </footer>
 </body>
