--- a/offer.html
+++ b/offer.html
@@ -44,7 +44,7 @@
     </section>
     <footer>
         <div class="footcontent">
-            <p>© 2021 Sweet Tooth Factory</p>
+            <p>© 2021 <a href="index.html">Sweet Tooth Factory</a></p>
         </div>
     </footer>
 </body>
